--- a/source/index.html
+++ b/source/index.html
@@ -32,16 +32,16 @@
           <img src="img/icon-close.svg" class="page-header__logo-menu-image" alt="" width="24" height="18">
         </a>
       </div>
-      <nav class="menu-main">
-        <ul class="menu-main__sub">
-          <li class="menu-main__sub-menu-elem"><a href="index.html"
-              class="menu-main__sub-menu-elem-link menu-main__sub-menu-elem-link-index menu-main__sub-menu-elem-link-active">Главная</a>
+      <nav class="page-header__menu-main">
+        <ul class="page-header__menu-main-sub">
+          <li class="page-header__menu-main-sub-menu-elem page-header__menu-main-sub-menu-elem-li--active"><a href="index.html"
+              class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--index ">Главная</a>
           </li>
-          <li class="menu-main__sub-menu-elem "><a href="catalog.html"
-              class="menu-main__sub-menu-elem-link menu-main__sub-menu-elem-link-index">Каталог
+          <li class="page-header__menu-main-sub-menu-elem "><a href="catalog.html"
+              class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link-index">Каталог
               продукции</a></li>
-          <li class="menu-main__sub-menu-elem"><a href="form.html"
-              class="menu-main__sub-menu-elem-link menu-main__sub-menu-elem-link-index">Подбор
+          <li class="page-header__menu-main-sub-menu-elem"><a href="form.html"
+              class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link-index">Подбор
               программы</a></li>
         </ul>
       </nav>
@@ -53,14 +53,10 @@
       <h1 class="header-background__main-words">Функциональное питание для котов</h1>
       <h2 class="header-background__work-for-your-cat">Занялся собой? Займись котом!</h2>
     </div>
-    <!--<img src="img/index-can-mobile.png" alt="index-can-mobile" class="header-background__mobile-img" width="280"
-      height="270">
-    <img src="img/index-can-tablet.png" alt="index-can-tablet" class="header-background__tablet-img">
-    <img src="img/index-can-desktop.png" alt="index-can-desktop" class="header-background__desktop-img">-->
     <picture>
       <source media="(min-width: 1220px)" srcset="img/index-can-desktop.png 1x, img/index-can-desktop@2x.png 2x">
       <source media="(min-width: 768px)" srcset="img/index-can-tablet.png 1x, img/index-can-tablet@2x.png 2x">
-      <img class="header-background__mobile-img" src="img/index-can-mobile.png" srcset="img/index-can-mobile@2x.png 2x"
+      <img class="header-background__img" src="img/index-can-mobile.png" srcset="img/index-can-mobile@2x.png 2x"
         alt="Индекс большой стакан">
     </picture>
     <a href="" class="check-your-program"> Подобрать программу</a>
@@ -142,12 +138,10 @@
         <div class="how-it-is-work__sub-two-items">
           <div class="how-it-is-work__sub how-it-is-work__sub-first-child">
             <span class="how-it-is-work__green advantage-1">
-              <!--<img src="img/advantage-1.png" alt="advantage1" class="how-it-is-work__sub-img-advantage" width="26"
-                height="29">-->
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/advantage-1.png 1x, img/advantage-leaf@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/advantage-1.png 1x, img/advantage-leaf@2x.jpg 2x">
-                <img class="works-item__image" src="img/advantage-1.png" srcset="img/advantage-leaf@2x.jpg 2x"
+                <source media="(min-width: 1200px)" srcset="img/advantage-1.png 1x, img/advantage-leaf@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/advantage-1.png 1x, img/advantage-leaf@2x.png 2x">
+                <img class="works-item__image" src="img/advantage-1.png" srcset="img/advantage-leaf@2x.png 2x"
                   alt="Пример нашей работы">
               </picture>
             </span>
@@ -159,12 +153,10 @@
           <div
             class="how-it-is-work__sub how-it-is-work__sub-powder how-it-is-work__powder how-it-is-work__sub-second-child">
             <span class="how-it-is-work__green advantage-1">
-              <!--<img src="img/advantage-2.png" alt="advantage2" class="how-it-is-work__sub-img-advantage" width="29"
-                height="31">-->
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/advantage-2.png 1x, img/advantage-powder@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/advantage-2.png 1x, img/advantage-powder@2x.jpg 2x">
-                <img class="works-item__image" src="img/advantage-2.png" srcset="img/photo-1-mobile@2x.jpg 2x"
+                <source media="(min-width: 1200px)" srcset="img/advantage-2.png 1x, img/advantage-powder@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/advantage-2.png 1x, img/advantage-powder@2x.png 2x">
+                <img class="works-item__image" src="img/advantage-2.png" srcset="img/photo-1-mobile@2x.png 2x"
                   alt="Пример нашей работы">
               </picture>
             </span>
@@ -178,13 +170,11 @@
         <div class="how-it-is-work__sub-two-items">
           <div class="how-it-is-work__sub how-it-is-work__sub-third-child">
             <span class="how-it-is-work__green advantage-1">
-              <!--<img src="img/advantage-3.png" alt="advantage3" class="how-it-is-work__sub-img-advantage" width="23"
-                height="30">-->
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/advantage-3.png 1x, img/advantage-dining@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/advantage-3.png 1x, img/advantage-dining@2x.jpg 2x">
+                <source media="(min-width: 1200px)" srcset="img/advantage-3.png 1x, img/advantage-dining@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/advantage-3.png 1x, img/advantage-dining@2x.png 2x">
                 <img class="how-it-is-work__sub-img-advantage" src="img/advantage-3.png"
-                  srcset="advantage-dining@2x.jpg 2x" alt="advantage3">
+                  srcset="advantage-dining@2x.png 2x" alt="advantage3">
               </picture>
             </span>
             <span class="how-it-is-work__sub-text how-it-is-work__sub-text-third-child">Замените один-два приема обычной
@@ -194,13 +184,11 @@
 
           <div class="how-it-is-work__sub how-it-is-work__sub-clock how-it-is-work__sub-fourth-child">
             <span class="how-it-is-work__green advantage-1">
-              <!--<img src="img/advantage-4.png" alt="advantage4" class="how-it-is-work__sub-img-advantage" width="26"
-                height="31">-->
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/advantage-4.png 1x, img/advantage-clock@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/advantage-4.png 1x, img/advantage-clock@2x.jpg 2x">
+                <source media="(min-width: 1200px)" srcset="img/advantage-4.png 1x, img/advantage-clock@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/advantage-4.png 1x, img/advantage-clock@2x.png 2x">
                 <img class="how-it-is-work__sub-img-advantage" src="img/advantage-4.png"
-                  srcset="img/photo-1-mobile@2x.jpg 2x" alt="advantage4">
+                  srcset="img/photo-1-mobile@2x.png 2x" alt="advantage4">
               </picture>
             </span>
             <span
@@ -252,10 +240,32 @@
           </div>
 
           <div class="live-example__slider">
-            <img src="img/cat1-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-1">
-            <img src="img/cat2-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-2">
-            <img src="img/big-index-slider-cat.png" alt="big-index-slider-cat"
-              class="live-example__slider-slide-show-tablet">
+            <!--<img src="img/cat1-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-1">
+            <img src="img/cat2-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-2">-->
+
+            <div class="live-example__slider-two-cats">
+
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
+                <img class="how-it-is-work__sub-img-advantage live-example__slider--slide live-example__slider--before-slide" src="img/before-mobile@1x.png"
+                  srcset="img/before-mobile@2x.png 2x" alt="Big slider cat">
+              </picture>
+
+
+
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
+                <img class="how-it-is-work__sub-img-advantage live-example__slider--slide live-example__slider--after-slide" src="img/after-mobile@1x.png"
+                  srcset="img/after-mobile@2x.png 2x" alt="Small Slider Cat">
+              </picture>
+
+
+
+
+
+</div>
             <div class="live-example__slider-controls">
               <span class="live-example__slider-button">Было</span>
               <div class="live-example__slider-on-off">
@@ -283,7 +293,7 @@
     </div>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d20307.5497561974!2d30.498387490673824!3d50.48869895940726!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1586080633832!5m2!1sru!2sua"
-      height="362" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+      height="362" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
       class="map__iframe map__iframe-index"></iframe>
   </div>
   <footer class="footer footer-index">
@@ -324,7 +334,7 @@
         <a href="https://htmlacademy.ru" class="right-logo__link-organization">
           HTML Academy
         </a>
-        <img src="img/htmlaademy-footer-logo.png" alt="" class="right-logo__logo-organization" width="27" height="34">
+        <img src="img/htmlacademy.svg" alt="" class="right-logo__logo-organization" width="27" height="34">
       </div>
     </div>
   </footer>
