--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,6 +38,14 @@
               продукции</a></li>
           <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
               программы</a></li>
+              <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
+                программы</a></li>
+                <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
+                  программы</a></li>
+                  <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
+                    программы</a></li>
+              <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
+              программы</a></li>
         </ul>
       </nav>
     </div>
@@ -294,7 +302,8 @@
         <button class="find-all-goods__show-all-goods">Показать все</button>
       </div>
     </section>
-    <section cite="additional-goods">
+    <section class="additional-goods">
+      <h2 class="additional-goods__hidden-header">Additional goods</h2>
       <div class="additional-goods__header">
         <div class="additional-goods__header-line additional-goods_header-line-tablet-show">
         </div>
@@ -307,6 +316,7 @@
       <div class="additional-goods__content">
         <div class="additional-goods__content-desktop-articles">
           <article class="additional-goods__article">
+            <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
             <div class="additional-goods__article-main-div">
               <div class="additional-goods__article-main-text">
 
@@ -329,6 +339,7 @@
             </div>
           </article>
           <article class="additional-goods__article">
+            <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
             <div class="additional-goods__article-main-div">
               <div class="additional-goods__article-main-text">
 
@@ -351,7 +362,7 @@
             </div>
           </article>
           <article class="additional-goods__article">
-
+            <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
             <div class="additional-goods__article-main-div">
               <div class="additional-goods__article-main-text">
 
@@ -376,6 +387,7 @@
             </div>
           </article>
           <article class="additional-goods__article additional-goods__article-last-child">
+            <h3 class="additional-goods__hidden-article-header"> Hidden article header</h3>
             <div class="additional-goods__article-main-div">
               <div class="additional-goods__article-main-text">
 
@@ -423,7 +435,7 @@
     </div>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d20307.5497561974!2d30.498387490673824!3d50.48869895940726!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1586080633832!5m2!1sru!2sua"
-      frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+      style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
       class="map__iframe map__iframe-catalog"></iframe>
   </div>
 
@@ -465,7 +477,7 @@
         <a href="https://htmlacademy.ru" class="right-logo__link-organization">
           HTML Academy
         </a>
-        <img src="img/htmlaademy-footer-logo.png" alt="" class="right-logo__logo-organization" width="27" height="34">
+        <img src="img/htmlacademy.svg" alt="" class="right-logo__logo-organization" width="27" height="34">
       </div>
     </div>
   </footer>
