поправил ошибки с пикче

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,22 +29,16 @@
           <img src="img/icon-close.svg" class="page-header__logo-menu-image" alt="" width="24" height="18">
         </a>
       </div>
-      <nav class="menu-main">
-        <ul class="menu-main__sub">
-          <li class="menu-main__sub-menu-elem"><a href="index.html" class="menu-main__sub-menu-elem-link">Главная</a>
+      <nav class="page-header__menu-main">
+        <ul class="page-header__menu-main-sub">
+          <li class="page-header__menu-main-sub-menu-elem page-header__menu-main-sub-menu-elem-li--active"><a href="index.html"
+              class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--catalog ">Главная</a>
           </li>
-          <li class="menu-main__sub-menu-elem "><a href="catalog.html"
-              class="menu-main__sub-menu-elem-link menu-main__sub-menu-elem-link-active">Каталог
+          <li class="page-header__menu-main-sub-menu-elem "><a href="catalog.html"
+              class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--catalog">Каталог
               продукции</a></li>
-          <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
-              программы</a></li>
-              <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
-                программы</a></li>
-                <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
-                  программы</a></li>
-                  <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
-                    программы</a></li>
-              <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
+          <li class="page-header__menu-main-sub-menu-elem"><a href="form.html"
+              class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--catalog">Подбор
               программы</a></li>
         </ul>
       </nav>
@@ -57,15 +51,12 @@
       <div class="main-catalog__good">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <!--
-            <img src="img/catalog-1-mobile.jpg" alt="" class="main__catalog-mobile-image">
-            <img src="img/catalog-1-tablet.png" alt="" class="main__catalog-tablet-image" width="156" height="172">-->
             <picture>
               <source media="(min-width: 1220px)"
                 srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
               <source media="(min-width: 768px)"
                 srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-              <img class="main__catalog-mobile-image" src="img/chicken-small-mobile@1x.jpg"
+              <img class="main__catalog-image main__catalog--first-image" src="img/chicken-small-mobile@1x.jpg"
                 srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Первый товар с каталог галереи">
             </picture>
 
@@ -91,18 +82,15 @@
       <div class="main-catalog__good">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <!--<img src="img/catalog-2-mobile.png" alt="" class="main__catalog-mobile-image">
-            <img src="img/catalog-2-tablet.png" alt="" class="main__catalog-tablet-image main__catalog-tablet-big-image"
-              width="190" height="206">-->
             <picture>
               <source media="(min-width: 1220px)"
                 srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
               <source media="(min-width: 768px)"
                 srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-              <img class="main__catalog-mobile-image" src="img/chicken-big-mobile@1x.jpg"
+              <img class="main__catalog-image main__catalog--second-image" src="img/chicken-big-mobile@1x.jpg"
                 srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Второй товар с каталог галереи">
             </picture>
-            <div class="main-catalog__good-data">
+            <div class="main-catalog__good-data main-catalog__good-data-second">
               <span class="main-catalog__good-header">Cat Energy PRO 1000 г</span>
               <div class="main-catalog__good-volume main-catalog__good-data-sub">
                 <span class="main-catalog__good-volume-sub main-catalog__more-than-thousand">Объем </span>
@@ -124,15 +112,12 @@
       <div class="main-catalog__good main-catalog__good-third-item">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <!--<img src="img/catalog-3-mobile.png" alt="" class="main__catalog-mobile-image">
-            <img src="img/catalog-3-tablet.png" alt=""
-              class="main__catalog-tablet-image main__catalog-tablet-third-image" width="158" height="172">-->
             <picture>
               <source media="(min-width: 1220px)"
                 srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
               <source media="(min-width: 768px)"
                 srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-              <img class="main__catalog-mobile-image" src="img/fish-small-mobile@1x.jpg"
+              <img class="main__catalog-image " src="img/fish-small-mobile@1x.jpg"
                 srcset="img/fish-small-mobile@2x.jpg 2x" alt="Третий товар с каталог галереи">
             </picture>
             <div class="main-catalog__good-data">
@@ -151,21 +136,18 @@
               </div>
             </div>
           </div>
-          <button class="main-catalog__good-order">Заказать</button>
+          <button class="main-catalog__good-order main-catalog__good-order--third-image">Заказать</button>
         </div>
       </div>
       <div class="main-catalog__good main-catalog__good-fourth-item">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <!--<img src="img/catalog-4-mobile.png" alt="" class="main__catalog-mobile-image">
-            <img src="img/catalog-4-tablet.png" alt=""
-              class="main__catalog-tablet-image  main__catalog-tablet-big-image" width="191" height="206">-->
             <picture>
               <source media="(min-width: 1220px)"
                 srcset="img/fish-big-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
               <source media="(min-width: 768px)"
                 srcset="img/fish-big-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-              <img class="main__catalog-mobile-image" src="img/fish-big-mobile@1x.jpg"
+              <img class="main__catalog-image main__catalog--fourth-image" src="img/fish-big-mobile@1x.jpg"
                 srcset="img/fish-big-mobile@2x.jpg 2x" alt="Четвертый товар с каталог галереи">
             </picture>
             <div class="main-catalog__good-data">
@@ -190,15 +172,13 @@
       <div class="main-catalog__good main-catalog__good-margin-zero">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <!--<img src="img/catalog-5-mobile.png" alt="" class="main__catalog-mobile-image">
-            <img src="img/catalog-5-tablet.png" alt="" class="main__catalog-tablet-image" width="160" height="172">-->
             <picture>
               <source media="(min-width: 1220px)"
                 srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@1x.png 2x">
               <source media="(min-width: 768px)"
                 srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@1x.png 2x">
-              <img class="main__catalog-mobile-image" src="img/buckwheat-small-mobile@1x.jpg"
-                srcset="img/buckwheat-small-mobile@1x.jpg 2x" alt="Пятый товар с каталог галереи">
+              <img class="main__catalog-image main__catalog--fifth-image " src="img/buckwheat-small-mobile@1x.jpg"
+                srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Пятый товар с каталог галереи">
             </picture>
             <div class="main-catalog__good-data">
               <span class="main-catalog__good-header">Cat Energy SLIM 500 г</span>
@@ -222,15 +202,12 @@
       <div class="main-catalog__good main-catalog__good-margin-zero">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <!--<img src="img/catalog-6-mobile.png" alt="" class="main__catalog-mobile-image">
-            <img src="img/catalog-6-tablet.png" alt=""
-              class="main__catalog-tablet-image  main__catalog-tablet-big-image" width="191" height="205">-->
             <picture>
               <source media="(min-width: 1220px)"
                 srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
               <source media="(min-width: 768px)"
                 srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-              <img class="main__catalog-mobile-image" src="img/buckwheat-big-mobile@1x.jpg"
+              <img class="main__catalog-image main__catalog--sixth-image" src="img/buckwheat-big-mobile@1x.jpg"
                 srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Шестой товар с каталог галереи">
             </picture>
             <div class="main-catalog__good-data">
@@ -255,14 +232,12 @@
       <div class="main-catalog__good main-catalog__good-last-child main-catalog__good-margin-zero">
         <div class="main-catalog__good-content">
           <div class="main-catalog__good-content-sub-text">
-            <!--<img src="img/catalog-7-mobile.png" alt="" class="main__catalog-mobile-image">
-            <img src="img/catalog-7-tablet.png" alt="" class="main__catalog-tablet-image" width="160" height="171">-->
             <picture>
               <source media="(min-width: 1220px)"
                 srcset="img/brice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
               <source media="(min-width: 768px)"
-                srcset="img/rice-small-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-              <img class="main__catalog-mobile-image" src="img/rice-small-mobile@1x.jpg"
+                srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+              <img class="main__catalog-image main__catalog--seventh-image " src="img/rice-small-mobile@1x.jpg"
                 srcset="img/rice-small-mobile@2x.jpg 2x" alt="Седьмой товар с каталог галереи">
             </picture>
             <div class="main-catalog__good-data">
@@ -281,7 +256,7 @@
               </div>
             </div>
           </div>
-          <button class="main-catalog__good-order">Заказать</button>
+          <button class=" main-catalog__good-order main-catalog__good-order--last-child">Заказать</button>
         </div>
       </div>
       <div class="main-catalog__good find-all-goods">
