--- a/source/form.html
+++ b/source/form.html
@@ -28,14 +28,16 @@
           <img src="img/icon-close.svg" class="page-header__logo-menu-image" alt="" width="24" height="18">
         </a>
       </div>
-      <nav class="menu-main">
-        <ul class="menu-main__sub">
-          <li class="menu-main__sub-menu-elem"><a href="index.html" class="menu-main__sub-menu-elem-link">Главная</a>
+      <nav class="page-header__menu-main">
+        <ul class="page-header__menu-main-sub">
+          <li class="page-header__menu-main-sub-menu-elem page-header__menu-main-sub-menu-elem-li--active"><a href="index.html"
+              class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--form ">Главная</a>
           </li>
-          <li class="menu-main__sub-menu-elem "><a href="catalog.html" class="menu-main__sub-menu-elem-link ">Каталог
+          <li class="page-header__menu-main-sub-menu-elem "><a href="catalog.html"
+              class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--form">Каталог
               продукции</a></li>
-          <li class="menu-main__sub-menu-elem"><a href="form.html"
-              class="menu-main__sub-menu-elem-link menu-main__sub-menu-elem-link-active">Подбор
+          <li class="page-header__menu-main-sub-menu-elem"><a href="form.html"
+              class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--form">Подбор
               программы</a></li>
         </ul>
       </nav>
