--- a/source/index.html
+++ b/source/index.html
@@ -55,7 +55,7 @@
     </div>
     <picture>
       <source media="(min-width: 1220px)" srcset="img/index-can-desktop.png 1x, img/index-can-desktop@2x.png 2x">
-      <source media="(min-width: 768px)" srcset="img/index-can-tablet.png 1x, img/index-can-tablet@2x.png 2x">
+      <source media="(min-width: 768px)" srcset="img/index-can-tablet.png 1x, img/index-can-tablet@2x.jpg 2x">
       <img class="header-background__img" src="img/index-can-mobile.png" srcset="img/index-can-mobile@2x.png 2x"
         alt="Индекс большой стакан">
     </picture>
