--- a/source/catalog.html
+++ b/source/catalog.html
@@ -94,6 +94,19 @@ VeeuXILfK1mngeSS/YoGEejzAAseyUz5rO/y2rPJP+I/EdL+0afqTD3H3o+/OgwsyhC43O8jNOgAAAAB
     </symbol>
 </svg>
 
+<svg display="none">
+
+
+  <symbol id="footer-logo-htmlacademy" xmlns="http://www.w3.org/2000/svg" class="right-logo__logo-organization" width="35" height="34" viewBox="0 0 60 60" >
+
+    <path  d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+
+
+  </symbol>
+
+
+    </svg>
+
     <header class="page-header">
       <div class="page-header__menu">
         <div class="page-header__menu-logos-links">
@@ -118,8 +131,8 @@ VeeuXILfK1mngeSS/YoGEejzAAseyUz5rO/y2rPJP+I/EdL+0afqTD3H3o+/OgwsyhC43O8jNOgAAAAB
               href="index.html"
               class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--catalog ">Главная</a>
             </li>
-            <li class="page-header__menu-main-sub-menu-elem "><a href="catalog.html"
-              class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--catalog page-header__menu-main-sub-menu-elem-link--catalog-active">Каталог
+            <li class="page-header__menu-main-sub-menu-elem page-header__menu-main-sub-menu-elem-li--catalog-active"><a href="catalog.html"
+              class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--catalog ">Каталог
               продукции</a>
             </li>
             <li class="page-header__menu-main-sub-menu-elem"><a href="form.html"
@@ -481,10 +494,7 @@ VeeuXILfK1mngeSS/YoGEejzAAseyUz5rO/y2rPJP+I/EdL+0afqTD3H3o+/OgwsyhC43O8jNOgAAAAB
 <!-- Второй свг-->
 
 
-            <svg width="55" height="60">
-              <use xlink:href="#gift.svg">
-              </use>
-            </svg>
+          <img src="img/gift.png" alt="gift" width="55" height="61" class="additional-goods__gift-image">
 
 
             <span class="additional-goods__green-background-text">
@@ -497,11 +507,11 @@ VeeuXILfK1mngeSS/YoGEejzAAseyUz5rO/y2rPJP+I/EdL+0afqTD3H3o+/OgwsyhC43O8jNOgAAAAB
       </section>
     </main>
     <div class="map">
-      <div class="communicating communicating-form communicating-catalog-block">
-        <div class="communicating__main-text">
-          <span class="communicating__offer-communicating">приглашаем к сотрудничеству дилеров!</span>
-          <span class="communicating__address communicating__address-catalog">ул. Большая Конюшенная, д. 19/8 <span
-            class="communicating__address-city">Санкт-Петербург</span></span>
+      <div class="map__communicating map__communicating-form map__communicating--catalog-block">
+        <div class="map__communicating-main-text">
+          <span class="map__communicating-offer-communicating">приглашаем к сотрудничеству дилеров!</span>
+          <span class="map__communicating-address map__communicating-address-catalog">ул. Большая Конюшенная, д. 19/8 <span
+            class="map__communicating-address-city">Санкт-Петербург</span></span>
         </div>
       </div>
       <iframe
@@ -561,7 +571,10 @@ VeeuXILfK1mngeSS/YoGEejzAAseyUz5rO/y2rPJP+I/EdL+0afqTD3H3o+/OgwsyhC43O8jNOgAAAAB
           <a href="https://htmlacademy.ru" class="right-logo__link-organization">
           HTML Academy
           </a>
-          <img src="img/htmlacademy.svg" alt="" class="right-logo__logo-organization" width="27" height="34">
+          <svg class="right-logo__logo-organization" height="34">
+            <use xlink:href="#footer-logo-htmlacademy"></use>
+          </svg>
+
         </div>
       </div>
     </footer>
