--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
 
 <body class="body">
   <svg width="0" height="0" style="display: none;">
-    <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 13" id="icon-mail">
+    <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 13" id="icon-mail" class="main-form__email-input-img">
       <path
         d="M15.6 11.6H1.4V5.8H0V13h17V5.8h-1.4v5.8zM0 0v2.3l8.5 7.1L17 2.3V0H0zm15.6 1.6L8.5 7.5 1.4 1.6v-.2h14.2v.2z">
       </path>
@@ -39,29 +39,28 @@
       </path>
       <circle cx="12.3" cy="3.7" r=".9"></circle>
     </symbol>
-    <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" id="htmlacademy">
+    <symbol id="footer-logo-htmlacademy" xmlns="http://www.w3.org/2000/svg" width="35" height="34" viewBox="0 0 52 54">
       <path
-        d="M30.2 5H30L10.3 7.1v36.2L30 55l19.7-11.7V7.1L30.2 5zm17 36.8L30 52 12.8 41.8V27l17.1 10.2V39l-11.7-7v1.8L30 40.9v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8L29.9 12.8 12.8 23V9.4L30 7.6l17.2 1.8V23z">
-      </path>
+        d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17
+          36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8
+          7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
     </symbol>
   </svg>
   <header class="page-header">
     <div class="page-header__menu">
       <div class="page-header__menu-logos-links">
         <a href="index.html" class="page-header__logo-site">
-          <img src="img/logo-mobile.png" alt="logo header-mobile site" class="page-header__logo-site-image-mobile"
-            width="33" height="38">
-          <img src="img/logo-tablet.svg" alt="logo header-tablet site" class="page-header__logo-site-image-tablet"
-            width="187" height="58">
-          <img src="img/logo-desktop.svg" alt="logo header-desktop site" class="page-header__logo-site-image-desktop"
-            width="202" height="61">
+
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="page-header__logo" src="img/logo-mobile.svg" alt="Logo" height="37" width="33">
+          </picture>
+
         </a>
-        <a href="index.html" class="page-header__logo-mobile-page">
-          <img src="img/logo-mobile-header.png" class="page-header__logo-page-image" alt="" width="101" height="18">
-        </a>
-        <a class="page-header__logo-mobile_menu">
-          <span class="page-header__logo-menu-image--close" alt="" width="24" height="18"></span>
-        </a>
+        <button class="page-header__logo-mobile_menu">
+          <span class="page-header__logo-mobile_menu-close"></span>
+        </button>
       </div>
       <nav class="page-header__menu-main">
         <ul class="page-header__menu-main-sub">
@@ -72,7 +71,7 @@
               class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--form">Каталог
               продукции</a>
           </li>
-          <li class="page-header__menu-main-sub-menu-elem page-header__form--li-active"><a href="form.html"
+          <li class="page-header__menu-main-sub-menu-elem page-header__form-li-active"><a href="form.html"
               class="page-header__menu-main-sub-menu-elem-link page-header__menu-main-sub-menu-elem-link--form ">Подбор
               программы</a>
           </li>
@@ -87,128 +86,127 @@
         <span class="main-form__full-anket">Заполните анкету и мы подберем программу питания для вашего кота</span>
         <div class="main-form__contact-inputs-radio-main">
           <div class="main-form__contact-inputs">
-            <div class="form__sub form__first-three-inputs">
-              <label for="name" class="form__sub-label-input-text form__sub-label-name">Имя:*</label>
+            <div class="main-form__sub main-form__first-three-inputs">
+              <label for="name" class="main-form__sub-label-input-text main-form__sub-label-name">Имя:*</label>
               <input type="text" placeholder="Барсик" id="name" name="name"
-                class="form__sub-input-text form__sub-label-input-name">
+                class="form__sub-input-text main-form__sub-label-input-name" required>
             </div>
-            <div class="form__sub form__sub-weight form__first-three-inputs">
-              <label for="weight" class="form__sub-label-input-text form__sub-label-weight">Вес (кг):*</label>
+            <div class="main-form__sub main-form__sub-weight main-form__first-three-inputs">
+              <label for="weight" class="main-form__sub-label-input-text main-form__sub-label-weight">Вес (кг):*</label>
               <input type="text" placeholder="7" id="weight" name="weight"
-                class="form__sub-input-text form__sub-label-input-weight">
+                class="main-form__sub-input-text main-form__sub-label-input-weight" required>
             </div>
-            <div class="form__sub form__sub-age form__first-three-inputs form__first-three-inputs-custom-border">
+            <div class="main-form__sub main-form__sub-age main-form__first-three-inputs main-form__first-three-inputs-custom-border">
               <label for="age"
-                class="form__sub-label-input-text form__sub-label-age form__first-three-inputs-last-child">Возраст
+                class="main-form__sub-label-input-text main-form__sub-label-age main-form__first-three-inputs-last-child">Возраст
                 (лет):</label>
-              <input type="text" placeholder="7" id="age" name="age" class="form__sub-input-text form__sub-input-age">
+              <input type="text" placeholder="7" id="age" name="age" class="main-form__sub-input-text main-form__sub-input-age">
             </div>
           </div>
           <div class="main-form__radio-part">
-            <div class="form__sub-radio">
-              <input type="radio" name="losing-weight" id="losing-weight" checked class="form__sub-input-radio">
-              <label for="losing-weight" class="form__sub-label-input-radio">Похудение</label>
+            <div class="main-form__sub-radio">
+              <input type="radio" name="losing-weight" id="losing-weight" checked class="main-form__sub-input-radio">
+              <label for="losing-weight" class="main-form__sub-label-input-radio">Похудение</label>
             </div>
-            <div class="form__sub-radio">
-              <input type="radio" name="losing-weight" id="mass-gain" class="form__sub-input-radio">
-              <label for="mass-gain" class="form__sub-label-input-radio">Набор массы</label>
+            <div class="main-form__sub-radio">
+              <input type="radio" name="losing-weight" id="mass-gain" class="main-form__sub-input-radio">
+              <label for="mass-gain" class="main-form__sub-label-input-radio">Набор массы</label>
             </div>
-            <div class="form__sub-radio">
-              <input type="radio" name="losing-weight" id="do-not-know" class="form__sub-input-radio">
-              <label for="do-not-know" class="form__sub-label-input-radio">Не знаю (нужен ваш совет)</label>
+            <div class="main-form__sub-radio">
+              <input type="radio" name="losing-weight" id="do-not-know" class="main-form__sub-input-radio">
+              <label for="do-not-know" class="main-form__sub-label-input-radio">Не знаю (нужен ваш совет)</label>
             </div>
           </div>
         </div>
       </div>
-      <div class="form__contact">
-        <div class="form__contact-data-for-cat-owner-left-line"></div>
-        <h2 class="form__contact-data-for-cat-owner">
+      <div class="main-form__contact">
+        <div class="main-form__contact-data-for-cat-owner-left-line"></div>
+        <h2 class="main-form__contact-data-for-cat-owner">
           Контактные данные (владельца кота)
         </h2>
-        <div class="form__contact-data-for-cat-owner-line"></div>
+        <div class="main-form__contact-data-for-cat-owner-line"></div>
       </div>
-      <div class="form__contact__email-plus-phone">
-        <div class="form__sub form__contact-data-cat-owner-email">
-          <label for="email" class="form__sub-label-email form__sub-contact-cat-data">E-mail:*</label>
-          <input type="text" placeholder="kuklachev@gmail.com" id="email" name="email"
-            class="form__sub-input-text-email">
-          <svg class="form__email-input-img" width="17" height="13">
+      <div class="main-form__contact__email-plus-phone">
+        <div class="main-form__sub main-form__contact-data-cat-owner-email">
+          <label for="email" class="main-form__sub-label-email main-form__sub-contact-cat-data">E-mail:*</label>
+          <input type="email" placeholder="kuklachev@gmail.com" id="email" name="email"
+            class="main-form__sub-input-text-email" required>
+          <svg class="main-form__email-input-img" width="17" height="13">
             <use xlink:href="#icon-mail"></use>
           </svg>
-
         </div>
-        <div class="form__sub form__contact-data-cat-owner-telephone">
-          <label for="telephone" class="form__sub-label-telephone form__sub-contact-cat-data">Телефон:*</label>
-          <input type="text" placeholder="8 (960) 900-60-90" id="telephone" name="telephone"
-            class="form__sub-input-text-telephone">
-          <img src="img/icon-phone.svg" alt="phone icon" width="20" height="20" class="form__phone-image">
+        <div class="main-form__sub main-form__contact-data-cat-owner-telephone">
+          <label for="telephone" class="main-form__sub-label-telephone main-form__sub-contact-cat-data">Телефон:*</label>
+          <input type="tel" placeholder="8 (960) 900-60-90" id="telephone" name="telephone"
+            class="main-form__sub-input-text-telephone" required>
+          <img src="img/icon-phone.svg" alt="phone icon" width="20" height="20" class="main-form__phone-image">
         </div>
       </div>
-      <div class="form__commentary">
-        <div class="form__commentary-left-line"></div>
-        <span class="form__commentary-comment">
+      <div class="main-form__commentary">
+        <div class="main-form__commentary-left-line"></div>
+        <span class="main-form__commentary-comment">
           Комментарий
         </span>
-        <div class="form__commentary-line"></div>
+        <div class="main-form__commentary-line"></div>
       </div>
-      <div class="form__textarea">
-        <textarea name="commentary" class="form__commentary-textarea">Расскажите обо всех повадках кота
+      <div class="main-form__textarea">
+        <textarea name="commentary" class="main-form__commentary-textarea">Расскажите обо всех повадках кота
           </textarea>
       </div>
-      <div class="form__sub-additional">
-        <div class="forsm__sub-additional-left-line"></div>
-        <span class="form__sub-add">Дополнительно</span>
-        <div class="forsm__sub-additional-line"></div>
+      <div class="main-form__sub-additional">
+        <div class="main-form__sub-additional-left-line"></div>
+        <span class="main-form__sub-add">Дополнительно</span>
+        <div class="main-form__sub-additional-line"></div>
       </div>
-      <div class="form__checkboxes">
-        <div class="form__sub-two-checkbox">
-          <div class="form__sub-checkbox">
+      <div class="main-form__checkboxes">
+        <div class="main-form__sub-two-checkbox">
+          <div class="main-form__sub-checkbox">
             <input type="checkbox" name="sugarchange" id="sugarchange"
-              class="form__sub-input-sugarchange form__checkboxes-sub-input" checked>
+              class="main-form__sub-input-sugarchange main-form__checkboxes-sub-input" checked>
             <label for="sugarchange"
-              class="form__sub-label-sugarchange form__sub-contact-additional-data form__checkbox-label">Сахарозаменитель</label>
+              class="main-form__sub-label-sugarchange main-form__sub-contact-additional-data main-form__checkbox-label">Сахарозаменитель</label>
           </div>
-          <div class="form__sub-checkbox">
+          <div class="main-form__sub-checkbox">
             <input type="checkbox" id="drink-water" name="drink-water"
-              class="form__sub-input-drink-water form__checkboxes-sub-input">
+              class="main-form__sub-input-drink-water main-form__checkboxes-sub-input">
             <label for="drink-water"
-              class="form__sub-label-drink-water form__sub-contact-additional-data form__checkbox-label">Питьевая
+              class="main-form__sub-label-drink-water main-form__sub-contact-additional-data main-form__checkbox-label">Питьевая
               вода</label>
           </div>
         </div>
-        <div class="form__sub-two-checkbox">
-          <div class="form__sub-checkbox">
-            <input type="checkbox" name="milk" id="milk" class="form__sub-input-milk form__checkboxes-sub-input">
+        <div class="main-form__sub-two-checkbox">
+          <div class="main-form__sub-checkbox">
+            <input type="checkbox" name="milk" id="milk" class="main-form__sub-input-milk main-form__checkboxes-sub-input">
             <label for="milk"
-              class="form__sub-label-milk form__sub-contact-additional-data form__checkbox-label">Молоко</label>
+              class="main-form__sub-label-milk main-form__sub-contact-additional-data main-form__checkbox-label">Молоко</label>
           </div>
-          <div class="form__sub-checkbox">
+          <div class="main-form__sub-checkbox">
             <input type="checkbox" id="vitamines" name="vitamines"
-              class="form__sub-input-vitamines form__checkboxes-sub-input">
+              class="main-form__sub-input-vitamines main-form__checkboxes-sub-input">
             <label for="vitamines"
-              class="form__sub-label-vitamines form__sub-contact-additional-data form__checkbox-label">Витамины</label>
+              class="main-form__sub-label-vitamines main-form__sub-contact-additional-data main-form__checkbox-label">Витамины</label>
           </div>
         </div>
       </div>
-      <div class="form__submit">
-        <input type="submit" class="form__submit-input" value="Отправить заявку">
-        <span class="form__required-fields-text">* — Обязательные поля</span>
+      <div class="main-form__submit">
+        <input type="submit" class="main-form__submit-input" value="Отправить заявку">
+        <span class="main-form__required-fields-text">* — Обязательные поля</span>
       </div>
     </form>
   </main>
   <div class="map">
-    <div class="map__communicating map__communicating-form communicating-form-transformed">
+    <div
+      class="map__communicating map__communicating-form communicating-form-transformed map__communicating-com-information">
       <div class="map__communicating-main-text">
-        <span class="map__communicating-offer-communicating map__communicating__we-offer-form">приглашаем к
+        <span class="map__communicating-offer-communicating map__communicating__we-offer-form">приглашаем<br
+            class="map__desktop-block" /> к
           сотрудничеству дилеров!</span>
         <span class="map__communicating-address map__communicating__address-form">ул. Большая Конюшенная, д. 19/8 <span
-            class="communicating__address-city communicating__address-city--form">Санкт-Петербург</span></span>
+            class="map__communicating-address-city map__communicating-address-city--form">Санкт-Петербург</span></span>
       </div>
     </div>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d20307.5497561974!2d30.498387490673824!3d50.48869895940726!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1586080633832!5m2!1sru!2sua"
-      style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
-      class="map__iframe map__iframe-form"></iframe>
+    <div class="map__img map__img-catalog map__img-form"><img src="img/map-pin.png" alt="map-pin"
+        class="map__map-pin map__map-pin-form"></div>
   </div>
   <footer class="footer footer-index ">
     <div class="footer__footer-content">
@@ -218,45 +216,33 @@
       <ul class="footer__social-links">
         <li class="footer__social-links-li">
           <a href="https://vk.com" class="footer__vk-link">
-
-            <svg width="22" height="12" class="footer__social-image footer__social-image-vk soc-image">
+            <svg width="22" height="12" class="footer__social-image footer__social-image-vk footer__soc-image">
               <use xlink:href="#m-vk"></use>
             </svg>
-
-
           </a>
         </li>
-        <li class="footer__social-links-li">
+        <li class="footer__social-links-li footer__social-links-li-instagramm-form">
           <a href="https://instagramm.com" class="footer__instagramm-link">
-
-            <svg width="16" height="16" class="footer__social-image footer__social-image-insta soc-image">
+            <svg width="16" height="16" class="footer__social-image footer__social-image-insta footer__soc-image">
               <use xlink:href="#m-insta"></use>
             </svg>
-
-
-
           </a>
         </li>
-        <li class="footer__social-links-li footer__social-links-li-facebook">
+        <li class="footer__social-links-li footer__social-links-li-facebook footer__social-links-li-facebook-form">
           <a href="https://facebook.com" class="footer__facebook-link">
-
-            <svg width="10" height="19" class="footer__social-image footer__social-image-fb soc-image">
+            <svg width="10" height="19" class="footer__social-image footer__social-image-fb footer__soc-image">
               <use xlink:href="#m-fb"></use>
             </svg>
-
-
-
-
           </a>
         </li>
       </ul>
       <div class="footer__right-logo">
-        <a href="https://htmlacademy.ru" class="right-logo__link-organization">
-          HTML Academy
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="footer__right-logo-link-organization">
+          <span class="footer__name-org"> HTML Academy</span>
+          <svg class="footer__right-logo-organization" height="34">
+            <use xlink:href="#footer-logo-htmlacademy"></use>
+          </svg>
         </a>
-        <svg class="right-logo__logo-organization" height="34">
-          <use xlink:href="#htmlacademy"></use>
-        </svg>
       </div>
     </div>
   </footer>
